@@ -10,4 +10,15 @@
 -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
 -Djute.maxbuffer=15728640
 -Dlog4j2.formatMsgNoLookups=true
+--add-modules=org.bouncycastle.tls,org.bouncycastle.fips.core
+--module-path=/home/druid-cluster/apache-druid/lib
+--add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
+--add-exports=java.base/sun.security.provider=org.bouncycastle.fips.tls
+--add-exports=java.base/sun.security.provider=org.bouncycastle.fips.core
+-Djava.security.properties=/home/druid-cluster/apache-druid/conf/druid/bcfips-java.security
+-Dorg.bouncycastle.jsse.client.assumeOriginalHostName=true
+-Dorg.bouncycastle.fips.approved_only=true
+-Dorg.bouncycastle.jsse.enable_jks=true
+-Dorg.bouncycastle.jsse.server.dh.disableDefaultSuites=true
+-Dorg.bouncycastle.jsse.client.dh.disableDefaultSuites=true
 {{additional_jvm_config}}
